[project]
name = "research-agent"
version = "0.1.0"
description = "A CLI agent that researches a company and role, then writes a realistic day-to-day workflow for the job"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
